--- a/ChatBot/ollama-chatbot/config.yaml
+++ b/ChatBot/ollama-chatbot/config.yaml
@@ -1,7 +1,7 @@
-base_url: http://localhost:11434
+host: http://localhost:11434
 model: qwen3:4b-instruct
-system_prompt: You are a helpful assistant.
-parameters:
+system_content: You are a helpful assistant.
+options:
   num_ctx: 8192
   temperature: 0.7
   num_predict: -1
