--- a/RAG/naive-rag/config.yaml
+++ b/RAG/naive-rag/config.yaml
@@ -1,12 +1,10 @@
 embedder:
   url: https://api.siliconflow.cn/v1/embeddings
-  api_key: <your_api_key>
+  api_key: sk-uqpypgnjmfrpowkmhtnezvzkbgedjbozufjchxipirgpeowk
   model: BAAI/bge-m3
-vector_db:
-    collection_name: my_collection
 generator:
   host: http://localhost:11434
-  model: llama3.1:8b
+  model: gemma3:12b
   system_content: You are a helpful assistant.
   options:
     num_ctx: 8192
@@ -15,3 +13,7 @@ generator:
     top_k: 20
     top_p: 0.95
     min_p: 0.05
+retriever:
+  n_results: 5
+vector_db:
+    collection_name: my_collection
