--- a/RAG/naive-rag/config.yaml
+++ b/RAG/naive-rag/config.yaml
@@ -1,6 +1,6 @@
 embedder:
   url: https://api.siliconflow.cn/v1/embeddings
-  api_key: sk-uqpypgnjmfrpowkmhtnezvzkbgedjbozufjchxipirgpeowk
+  api_key: <your_api_key>
   model: BAAI/bge-m3
 generator:
   host: http://localhost:11434
