--- a/RAG/Retrieve_and_Rerank/config.yaml
+++ b/RAG/Retrieve_and_Rerank/config.yaml
@@ -13,6 +13,11 @@ generator:
     top_k: 20
     top_p: 0.95
     min_p: 0.05
+reranker:
+  url: https://api.siliconflow.cn/v1/rerank
+  api_key: <your_api_key>
+  model: BAAI/bge-reranker-v2-m3
+  top_k: 3
 retriever:
   n_results: 5
 vector_db:
