--- a/ollama-chat/config.yaml
+++ b/ollama-chat/config.yaml
@@ -1,7 +1,8 @@
 ip: 127.0.0.1
 port: 11434
-model: 
-  name: qwen3:4b-instruct
+model:
+  instruct: qwen3:4b-instruct
+  thinking: qwen3:4b-thinking
   options:
     num_ctx: 8192
     temperature: 0.7
